# Renult-Bill

./: .gitignore  README.md
Tresa-backend/: .env.example  .gitignore  chr-bootstrap.rsc  chr-verify.rsc  pyproject.toml  tresa_chr_sstp_fallover.rsc
Tresa-backend/app/: main.py
Tresa-backend/app/api/: deps.py
Tresa-backend/app/api/routes/: ads.py  auth.py  branch.py  health.py  messaging.py  monitoring.py  notification.py  package.py  portal.py  router.py  staff.py  telegram.py  ticket.py  upload.py  wallet.py
Tresa-backend/app/core/: config.py
Tresa-backend/app/db/: init.py  session.py
Tresa-backend/app/models/: __init__.py  branch.py  branch_wallet.py  captive_portal.py  email_verification.py  notification.py  notification_preference.py  platform_ledger.py  portal_ad.py  portal_payment.py  router.py  router_event.py  router_package.py  staff.py  telegram_connection.py  ticket.py  ticket_category.py  user.py  voucher_job.py  voucher_purchase.py  wallet.py  withdrawal_challenge.py
Tresa-backend/app/schemas/: ads.py  auth.py  branch.py  hotspot_provision.py  messaging.py  monitoring.py  notification.py  package.py  portal.py  router.py  staff.py  telegram.py  ticket.py  upload.py  wallet.py
Tresa-backend/app/services/: access.py  ads.py  auth.py  avatar.py  email.py  google.py  messaging.py  notification.py  portal.py  renult_pay.py  router_heartbeat.py  security.py  snmp_monitor.py  storage.py  telegram.py  voucher_lifecycle.py  wallet.py
Tresa-backend/tests/: test_ad_access.py  test_portal_limits.py  test_router_heartbeat.py  test_voucher_lifecycle.py
(+144 files in other folders)
