[project]
name = "tresa-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=45.0.0",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.136.3",
    "google-auth>=2.41.1",
    "google-auth-oauthlib>=1.2.3",
    "psycopg2-binary>=2.9.11",
    "resend>=2.22.0",
    "requests>=2.34.2",
    "routeros-api>=0.21.0",
    "sqlmodel>=0.0.38",
    "python-dotenv>=1.2.2",
    "africastalking>=2.0.2",
]
